--- a/EDnevnik/EDnevnik/EDnevnik.csproj
+++ b/EDnevnik/EDnevnik/EDnevnik.csproj
@@ -68,6 +68,12 @@
     <Compile Include="Konekcija.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Raspodela.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Raspodela.Designer.cs">
+      <DependentUpon>Raspodela.cs</DependentUpon>
+    </Compile>
     <Compile Include="Sifarnik.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +98,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Raspodela.resx">
+      <DependentUpon>Raspodela.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Sifarnik.resx">
       <DependentUpon>Sifarnik.cs</DependentUpon>
     </EmbeddedResource>
